--- a/letters_test.ipynb
+++ b/letters_test.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-10-27 11:47:18.764\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mwrite\u001b[0m:\u001b[36mwrite_pdf_linux\u001b[0m:\u001b[36m152\u001b[0m - \u001b[34m\u001b[1mSaved /home/mkoltunov/letters_dataset_generator/pdf/0.pdf\u001b[0m\n",
-      "\u001b[32m2023-10-27 11:47:20.222\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mwrite\u001b[0m:\u001b[36mwrite_jpg\u001b[0m:\u001b[36m162\u001b[0m - \u001b[34m\u001b[1mSaved ./jpg/0.pdf_dir/\u001b[0m\n"
+      "\u001b[32m2023-11-01 13:23:02.155\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mwrite\u001b[0m:\u001b[36mwrite_pdf_linux\u001b[0m:\u001b[36m152\u001b[0m - \u001b[34m\u001b[1mSaved /home/mkoltunov/letters_dataset_generator/pdf/0.pdf\u001b[0m\n",
+      "\u001b[32m2023-11-01 13:23:02.342\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mwrite\u001b[0m:\u001b[36mwrite_jpg\u001b[0m:\u001b[36m162\u001b[0m - \u001b[34m\u001b[1mSaved ./jpg/0.pdf_dir/\u001b[0m\n"
      ]
     }
    ],
@@ -20,6 +20,7 @@
     "from docx.enum.text import WD_LINE_SPACING, WD_ALIGN_PARAGRAPH\n",
     "from docx.enum.table import WD_CELL_VERTICAL_ALIGNMENT, WD_TABLE_ALIGNMENT\n",
     "import json\n",
+    "import os\n",
     "from write import write_pdf_linux, write_jpg\n",
     "\n",
     "logo = 'samples/logo/1.png'\n",
@@ -111,19 +112,107 @@
     "foot_table.cell(0, 2).paragraphs[0].add_run(creator_name)\n",
     "foot_table.cell(0, 2).paragraphs[0].alignment = WD_TABLE_ALIGNMENT.RIGHT\n",
     "\n",
+    "out_dir = 'letters_out'\n",
     "\n",
-    "document.save('letter.docx')\n",
+    "document.save(os.path.join(out_dir, 'doc', 'letter.docx'))\n",
     "\n",
-    "write_pdf_linux('letter.docx', '.', 0)\n",
-    "write_jpg('.', 0)"
+    "# write_pdf_linux('letter.docx', '.', 0)\n",
+    "# write_jpg('.', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Кернел падает\n",
+    "# import aspose.words as aw\n",
+    "\n",
+    "# # Load word document\n",
+    "# doc = aw.Document(os.path.join(out_dir, 'doc', 'letter.docx'))\n",
+    "\n",
+    "# # Save as PDF\n",
+    "# doc.save(os.path.join(out_dir, 'pdf', 'letter.pdf'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# docxtpl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from docxtpl import DocxTemplate\n",
+    "\n",
+    "doc = DocxTemplate('letter.docx')\n",
+    "context = {'sender': header,\n",
+    "           'reciever': creator_name}\n",
+    "doc.render(context)\n",
+    "\n",
+    "doc.save('letter1.docx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# lowritter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "import os\n",
+    "\n",
+    "wordfile = os.path.join(out_dir, 'doc', 'letter.docx')\n",
+    "command = [\"lowriter\", \"--headless\", \"--convert-to\", \"pdf\", wordfile]\n",
+    "subprocess.call(command)\n",
+    "if os.path.exists(\"yourword.pdf\"):\n",
+    "    print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spire.Doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Spire.Doc\n",
+    "from spire.doc import *\n",
+    "from spire.doc import *\n",
+    "\n",
+    "spire_document = Document()\n",
+    "\n",
+    "spire_document.LoadFromFile(os.path.join(out_dir, 'doc', 'letter.docx'))\n",
+    "\n",
+    "spire_document.SaveToFile(os.path.join(out_dir, 'pdf', 'letter.pdf'), FileFormat.PDF)\n",
+    "spire_document.Close()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "letters_gen",
    "language": "python",
-   "name": "python3"
+   "name": "letters_gen"
   },
   "language_info": {
    "codemirror_mode": {
@@ -135,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
