word to pdf experimenting

--- a/letters_test.ipynb
+++ b/letters_test.ipynb
@@ -206,6 +206,69 @@
     "spire_document.SaveToFile(os.path.join(out_dir, 'pdf', 'letter.pdf'), FileFormat.PDF)\n",
     "spire_document.Close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Word to HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mammoth\n",
+    "\n",
+    "with open(os.path.join(out_dir, 'doc', 'letter.docx'), 'rb') as f:\n",
+    "    result = mammoth.convert_to_html(f)\n",
+    "    html = result.value\n",
+    "    messages = result.messages # emptyb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(out_dir, 'html', 'letter.html'), 'w') as f:\n",
+    "    f.write('<html><head><meta charset=\"utf-8\"></head>' + html + '</html>')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(out_dir, 'html', 'letter.html'), 'wb') as f:\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    html_file = soup.prettify('utf-8')\n",
+    "    f.write(html_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PDFkit (requires wkhtmltopdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pdfkit\n",
+    "\n",
+    "html_path = os.path.join(out_dir, 'html', 'letter.html')\n",
+    "\n",
+    "pdfkit.from_file(html_path, os.path.join(out_dir, 'pdf', 'letter.pdf'))"
+   ]
   }
  ],
  "metadata": {
